# HyCAN

./: .env  .gitignore  .pylintrc  3d_visualization.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HyCAN.desktop  HyCAN_UPDATED_README.md  LICENSE  Makefile  README.md  ROADMAP.md  Untitled.rtf  __init__.py  about.md  analytics.js  animations.py  app.py  automation_script.sh  bioinformatics.md  build.bat  build.sh  cli.py  codex_suggestions.py  config.yaml  configuration.md  custom_reports.py  dashboard.py  deployment.yaml  docker-compose.yml  docker_testing_script.py  example.proto  example.proto.enc  hycan_cli.py  hycan_data.proto  inference_service.py  interactive_dashboard.py  leaderboards.py  (+17 more)
.github/: FUNDING.yml  dependabot.yml
Docker/: Dockerfile
Documentation/: deployment_guide.md  faq.md  interactive_visualizations.py
HyCAN-main/: CHANGELOG.md  Dockerfile  README.md  mkdocs.yml  requirements.txt
Source Code/: app.py  main.py
Tests/: pytest.ini  test_app.py  test_bioinformatics.py  test_dashboard.py  test_feature_engineering.py  test_simulation.py  test_train.py  test_transfer_learning.py
architecture/: HyCAN_architecture.adoc
automation/: debug_utils.py  logger.py
bioinformatics/: sequence_analysis.py
cloud/: aws_integration.py  gcp_integration.py
config/: cloudflare_d1_config.ini  config.yml  docker-compose.yml  ipfs_config.ini  mkdocs.yml  monit_hycan.conf  postgres_config.ini  prometheus.yml  requirements.txt
core/: analytics_dashboard.py  anomaly_detection.py  automl.py  feature_engineering.py  simulation.py
(+140 files in other folders)
