
[metadata]
name = hycan
version = 1.0.0
author = HyCAN Team
description = Hydrogen Catalyst and AI Nanomaterials Platform
license = MIT

[options]
packages = find:
include_package_data = True
install_requires =
    -r requirements.txt

[options.entry_points]
console_scripts =
    hycan-cli = hycan_cli:main
